--- a/app/views/invitations/create.turbo_stream.erb
+++ b/app/views/invitations/create.turbo_stream.erb
@@ -1,5 +1,5 @@
 <%# 1. Update the Flash %>
-<%= turbo_stream.update "flash", partial: "layouts/shared/flash" %>
+<%= turbo_stream.update "flash_messages", partial: "layouts/shared/flash" %>
 
 <%# 2. Append the new row %>
 <%= turbo_stream.prepend "invitations-list", partial: "invitations/invitation", locals: { invitation: @invitation } %>
