--- a/app/views/memberships/update.turbo_stream.erb
+++ b/app/views/memberships/update.turbo_stream.erb
@@ -1,5 +1,5 @@
 <%# 1. Update the Flash %>
-<%= turbo_stream.update "flash", partial: "layouts/shared/flash" %>
+<%= turbo_stream.update "flash_messages", partial: "layouts/shared/flash" %>
 
 <%# 2. Re-render the row %>
 <%= turbo_stream.replace dom_id(@membership), partial: "members/membership", locals: { membership: @membership } %>
