--- a/app/views/membership_mailer/removed.html.erb
+++ b/app/views/membership_mailer/removed.html.erb
@@ -11,5 +11,5 @@
 <p>
   You can still access your other workspaces here:
   <br>
-  <%= link_to "Go to Dashboard", root_url %>
+  <%= link_to "Go to Dashboard", root_url, target: "_blank" %>
 </p>
