--- a/app/views/layouts/sidebar/dashboard/_notifications_list.html.erb
+++ b/app/views/layouts/sidebar/dashboard/_notifications_list.html.erb
@@ -1,3 +1,4 @@
+<%= turbo_stream_from "notifications_#{current_user.id}" %>
 <div class="popover__scrollable-list">
 
     <div class=" border-main p-1">
