--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,12 +1,23 @@
 <% content_for :title, "Notifications" %>
+<% content_for :page_header, "Notifications" %>
 
-<div class="container i-full p-4 mi-auto" style="max-inline-size: 600px;">
-  <h1 class="text-2xl font-bold mbe-4">Notifications</h1>
+<div class="container i-full p-4 mi-auto" style="max-inline-size: 70rem">
+  <div class="flex items-center justify-between mbe-4">
+    <h1 class="text-2xl font-bold">All Notifications</h1>
+    
+    <%# FIX: Use turbo_method: :post here as well %>
+    <p>
+      <%= link_to "Mark all as read", 
+          mark_all_read_notifications_path, 
+          data: { turbo_method: :post },
+          class: "hover:text-green-700 text-xs" %>
+    </p>
+  </div>
   
   <div class="flex flex-col border border-main rounded-lg bg-surface">
     <div id="notifications-list">
       <% if @notifications.any? %>
-        <%= render @notifications %>
+        <%= render partial: "notifications/notification", collection: @notifications, as: :notification %>
       <% else %>
         <div class="p-8 text-center text-subtle">You have no notifications.</div>
       <% end %>
